--- a/index.css
+++ b/index.css
@@ -44,3 +44,9 @@
     border: 1px solid #ddd;
     margin-bottom: 10px;
 }
+header{
+    background-color: #228732;
+    margin:15px;
+    padding: 20px;
+
+}
