--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+nav ul{
+    list-style-type: none;
+}
+
+nav li{
+    display: inline;
+}
