--- a/index.css
+++ b/index.css
@@ -44,8 +44,25 @@
     border: 1px solid #ddd;
     margin-bottom: 10px;
 }
-
-
-
+header{
+    background-color: #228732;
     
-
+}
+footer{
+    background-color: green; 
+    color: white; 
+    padding: 20px; 
+    text-align: center; 
+    margin-top: 20px;
+}
+footer div{
+    margin-bottom: 10px;
+}
+footer div a{
+    color: white; 
+    text-decoration: none; 
+    margin: 0 15px;
+}
+footer p{
+    margin: 0;
+}
