--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ nav li{
     display: inline;
     list-style-type: none;
 }
+
+#banner{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("");
+}
+
