--- a/index.css
+++ b/index.css
@@ -44,8 +44,8 @@
     border: 1px solid #ddd;
     margin-bottom: 10px;
 }
-<<<<<<< HEAD
 
+/* Carrusel */
 .slider-container {
     width: 70%;
     height: calc(100vh-190px);
